--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 
 /*********************************
 COLORS
-1. Orange: #FF6138 ---> Main Color
+1. Orange: # ---> Main Color
 2. Yellowish: #FFFF9D
 3. lightgreen: #BEEB9F
 4. darkergreen: #79BD8F
@@ -18,6 +18,10 @@ body {
 	-web-kit-box-sizing: border-box;
 }
 
+.hide {
+	display: none;
+}
+
 .header {
 	width: 100%;
 	position: absolute;
@@ -25,6 +29,27 @@ body {
 	left: 0;
 	color: #FFF;
 }
+
+.menu {
+	position: absolute;
+	width: 100%;
+	background: rgba(0,0,0,0.7);
+}
+
+.menu ul {
+	margin-top: -10px;
+	list-style-type: none;
+	background: rgba(255,255,255,0.9);
+	text-align: center;
+	padding: 20px 0;
+}
+
+
+.menu ul a{
+	text-decoration: none; 
+	font-weight: 700;
+}
+
 
 .cont h1 {
 	width: 95%;
@@ -54,6 +79,15 @@ body {
 .cont, .index {
 	width: 95%;
 	margin: 0 auto;
+}
+
+.menuIndex a{
+	text-decoration: none;
+	color: #fff;
+}
+
+.menuIndex ol {
+	list-style-type: none;
 }
 
 .buttons {
