--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,28 @@ a {
 	color: #FFF;
 }
 
+/* The following code for the blockquote was taken from:
+	 http://css-tricks.com/snippets/css/simple-and-nice-blockquote-styling/
+*/
+blockquote {
+  /*background: #f9f9f9;*/
+  /*border-left: 10px solid #ccc;*/
+  margin: 1.5em 10px;
+  padding: 0.5em 10px;
+  quotes: "\201C""\201D""\2018""\2019";
+}
+blockquote:before {
+  color: #ccc;
+  content: open-quote;
+  font-size: 4em;
+  line-height: 0.1em;
+  margin-right: 0.25em;
+  vertical-align: -0.4em;
+}
+blockquote p {
+  display: inline;
+}
+
 .menu {
 	position: absolute;
 	width: 300px;
@@ -57,6 +79,11 @@ a {
 	margin: 0.7em auto;
 	font-size: 1.6em;
 }
+
+.cont h3, {
+	line-height: 0.8;
+}
+
 
 .nav{
 	background: url('../img/nav-bars.png');
